[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-publisher"
version = "1.0.0"
description = "Formats blog post outlines for publication on Substack, Obsidian, and other platforms"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OpenSeneca"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.scripts]
blog-publisher = "blog_publisher:main"

[tool.setuptools]
py-modules = ["blog_publisher"]
